<?xml version="1.0"?>
<package>
  <name>catflap_image_collector</name>
  <version>0.0.1</version>
  <description>The catflap_image_collector package</description>
  <maintainer email="kostka.max@gmail.com"></maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
