<?xml version="1.0"?>
<package>
  <name>catflap_telegram_node</name>
  <version>0.0.1</version>
  <description>The catflap_telegram_node package. Sends log messages and images via telegram api</description>
  <maintainer email="kostka.max@gmail.com">Max Kostka</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
